[gd_scene load_steps=3 format=3 uid="uid://cvgaunttcm2n5"]

[ext_resource type="Script" path="res://main.gd" id="1_188r0"]
[ext_resource type="PackedScene" uid="uid://xym4400tru8q" path="res://dice.tscn" id="1_kbq17"]

[node name="Main" type="Node2D" node_paths=PackedStringArray("dices")]
script = ExtResource("1_188r0")
dices = [NodePath("Dice"), NodePath("Dice2"), NodePath("Dice3"), NodePath("Dice4"), NodePath("Dice5")]

[node name="Dice" parent="." instance=ExtResource("1_kbq17")]
position = Vector2(618, 300)

[node name="Dice2" parent="." instance=ExtResource("1_kbq17")]
position = Vector2(710, 300)

[node name="Dice3" parent="." instance=ExtResource("1_kbq17")]
position = Vector2(802, 300)

[node name="Dice4" parent="." instance=ExtResource("1_kbq17")]
position = Vector2(896, 300)

[node name="Dice5" parent="." instance=ExtResource("1_kbq17")]
position = Vector2(997, 300)

[node name="RollButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 736.5
offset_top = 449.0
offset_right = 860.5
offset_bottom = 545.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Roll"

[node name="Scoreboard" type="Label" parent="."]
offset_left = 37.0
offset_top = 139.0
offset_right = 440.0
offset_bottom = 608.0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "0"
vertical_alignment = 2
justification_flags = 131

[node name="RoundStats" type="Label" parent="."]
offset_left = 37.0
offset_top = 31.0
offset_right = 416.0
offset_bottom = 144.0
theme_override_font_sizes/font_size = 24
text = "Round 1
Score at least 10
3 rolls left"

[node name="GameResult" type="Label" parent="."]
visible = false
offset_left = 535.0
offset_top = 51.0
offset_right = 1076.0
offset_bottom = 123.0
theme_override_font_sizes/font_size = 64
text = "ROUND WON!!!"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="RollButton" to="." method="_on_roll_button_pressed"]
